--- a/eBTW2.ioc
+++ b/eBTW2.ioc
@@ -84,12 +84,14 @@ PB1.Signal=GPIO_Output
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=ENCODER_X_B
 PB3.Signal=S_TIM2_CH2
-PB7.GPIOParameters=GPIO_Label
+PB7.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB7.GPIO_Label=PS2_IQR_CLK
+PB7.GPIO_PuPd=GPIO_NOPULL
 PB7.Locked=true
 PB7.Signal=GPXTI7
-PB8.GPIOParameters=GPIO_Label
+PB8.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB8.GPIO_Label=PS2_DATA
+PB8.GPIO_PuPd=GPIO_NOPULL
 PB8.Locked=true
 PB8.Signal=GPIO_Input
 PC13-TAMPER-RTC.GPIOParameters=GPIO_Label
